Increase memory allocation for Jenkins and enabled incremental collection.